--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -3,6 +3,7 @@
     <ul>
         <li *ngFor = 'let chore of chores'>{{chore}}</li>
     </ul>
+    <p *ngIf = "chores.length > finishedChores.length" style="color: blue;">Work Harder!</p>
 </div>
 <hr>
 <div class="doneChores">
@@ -10,5 +11,14 @@
     <ul>
         <li *ngFor = 'let done of finishedChores'>{{done}}</li>
     </ul>
+    <p *ngIf ="chores.length === 0 || finishedChores.length+3 > chores.length; else noMoney"><img src="{{targetImage}}" alt=""></p>
+    <ng-template #noMoney>
+        <p>No allowance yet.</p>
+    </ng-template>
+    <h1 *ngIf="chores.length === 0 && finishedChores.length >= 4; else noIceCream">Ice Cream treat!</h1>
+    <ng-template #noIceCream>
+        <h1>To earn an Ice cream treat:</h1>
+        <h3>The chores list must be empty and the done list must have at least 4 items.</h3>
+    </ng-template>
 </div>
 <hr>
